--- a/Prevu.Synoptics.V3001-COVERIS/P330.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P330.xaml
@@ -19,7 +19,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="381,724,0,0" VerticalAlignment="Top" Width="44" StatusComponent="330-01-MA1" PipeHeight="Medium"/>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="381,724,0,0" VerticalAlignment="Top" Width="44" StatusComponent="330-23-CV1" PipeHeight="Medium"/>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="455,724,0,0" VerticalAlignment="Top" Width="91" StatusComponent="330-23-CV1" PipeHeight="Medium"/>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="177,335,0,0" VerticalAlignment="Top" Width="166" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1">
 			<Labels:Pipe.RenderTransform>
@@ -53,7 +53,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="900,607,0,0" VerticalAlignment="Top" Width="34" StatusComponent="335-01-MA1" PipeHeight="Medium"/>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="900,607,0,0" VerticalAlignment="Top" Width="34" StatusComponent="335-23-CV1" PipeHeight="Medium"/>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="968,607,0,0" VerticalAlignment="Top" Width="87" StatusComponent="335-23-CV1" PipeHeight="Medium"/>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="754,277,0,0" VerticalAlignment="Top" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1">
 			<Labels:Pipe.RenderTransform>
@@ -107,7 +107,7 @@
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="1156,703,0,0" VerticalAlignment="Top" Width="133" StatusComponent="336-01-MA1" PipeHeight="Medium"/>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="269,112,0,0" VerticalAlignment="Top" Width="103" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="20"/>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="269,112,0,0" VerticalAlignment="Top" Width="103" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="20"/>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="345,147,0,0" VerticalAlignment="Top" Width="54" StatusComponent="322-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" VisibilitySignal="LS1" VisibilityComponent="326-21-CV1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
