--- a/Prevu.Synoptics.V3001-COVERIS/P380.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P380.xaml
@@ -101,8 +101,8 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="1050,388,0,0" VerticalAlignment="Top" Width="89" Color="Air" StatusComponent="380-26-CV1"/>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="817,388,0,0" VerticalAlignment="Top" Width="209" Color="Air" StatusComponent="380-01-MA1"/>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="1050,388,0,0" VerticalAlignment="Top" Width="89" Color="Air" StatusComponent="382-01-MA1"/>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="817,388,0,0" VerticalAlignment="Top" Width="209" Color="Air" StatusComponent="380-26-CV1" InverseStatus="True"/>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="1273,415,0,0" VerticalAlignment="Top" Color="ByProduct" Width="34" StatusComponent="382-01-MA1" RenderTransformOrigin="0.5,0.5">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
@@ -200,7 +200,7 @@
 				</TransformGroup>
 			</Machines:CV_Valve.RenderTransform>
 		</Machines:CV_Valve>
-		<Machines:CV_Valve HorizontalAlignment="Left" Margin="996,340,0,0" VerticalAlignment="Top" Height="100" Width="100" RenderTransformOrigin="0.5,0.5">
+		<Machines:CV_Valve HorizontalAlignment="Left" Margin="982,340,0,0" VerticalAlignment="Top" Height="100" Width="100" RenderTransformOrigin="0.5,0.5">
 			<Machines:CV_Valve.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -217,7 +217,7 @@
             VerticalAlignment="Top" 
             ComponentName="380-01-MA1" RenderTransformOrigin="0.567,-2.17"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="341,418,0,0" 
+            Margin="334,418,0,0" 
             VerticalAlignment="Top" 
             ComponentName="380-21-CV1" RenderTransformOrigin="0.567,-2.17"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -253,7 +253,7 @@
             VerticalAlignment="Top" 
             ComponentName="382-01-MA1" RenderTransformOrigin="0.567,-2.17"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1001,309,0,0" 
+            Margin="987,309,0,0" 
             VerticalAlignment="Top" 
             ComponentName="380-26-CV1" RenderTransformOrigin="0.567,-2.17"/>
 		<Labels:JumpLabel HorizontalAlignment="Left" 
