--- a/Prevu.Synoptics.V3001-COVERIS/PlantView.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/PlantView.xaml
@@ -11,37 +11,37 @@
              lex:ResxLocalizationProvider.DefaultDictionary="Resources"             
              mc:Ignorable="d" 
              d:Height="840" d:Width="1700" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid>
-        <Rectangle Height="600" Stroke="Black" Width="1470" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2"/>
+	<Grid Height="840" Width="1700">
+		<Rectangle Height="600" Stroke="Black" Width="1470" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2"/>
 
-        <Machines:QX_HMI HorizontalAlignment="Left" Margin="1410,260,0,0" VerticalAlignment="Top" Height="136" Width="125"/>
-        <Machines:QX_HMI HorizontalAlignment="Left" Margin="1410,510,0,0" VerticalAlignment="Top" Height="136" Width="125"/>
-        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="150,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
-        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="523,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
-        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="684,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
-        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="838,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
-        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="992,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
-        <Labels:DeviceLabel x:Name="Q41" HorizontalAlignment="Left" Margin="535,215,0,0" VerticalAlignment="Top" ComponentName="Q41"/>
-        <Labels:DeviceLabel x:Name="Q51" HorizontalAlignment="Left" Margin="696,215,0,0" VerticalAlignment="Top" ComponentName="Q51"/>
-        <Labels:DeviceLabel x:Name="Q61" HorizontalAlignment="Left" Margin="850,215,0,0" VerticalAlignment="Top" ComponentName="Q61"/>
-        <Labels:DeviceLabel x:Name="Q71" HorizontalAlignment="Left" Margin="1004,215,0,0" VerticalAlignment="Top" ComponentName="Q71"/>
-        <Labels:DeviceLabel x:Name="Q01" HorizontalAlignment="Left" Margin="162,200,0,0" VerticalAlignment="Top" ComponentName="Q01"/>
-        <Labels:DeviceLabel x:Name="ESTOP" HorizontalAlignment="Left" Margin="115,53,0,0" VerticalAlignment="Top" ComponentName="ESTOP-AREA-01"/>
-        <Labels:DeviceLabel x:Name="HMI_01" HorizontalAlignment="Left" Margin="1427,185,0,0" VerticalAlignment="Top" ComponentName="HMI-01"/>
-        <Labels:DeviceLabel x:Name="HMI_02" HorizontalAlignment="Left" Margin="1427,435,0,0" VerticalAlignment="Top" ComponentName="HMI-02"/>
-        <Labels:DeviceLabel x:Name="S410" HorizontalAlignment="Left" Margin="535,431,0,0" VerticalAlignment="Top" ComponentName="S410"/>
-        <Labels:DeviceLabel x:Name="S510" HorizontalAlignment="Left" Margin="696,431,0,0" VerticalAlignment="Top" ComponentName="S510"/>
-        <Labels:DeviceLabel x:Name="S610" HorizontalAlignment="Left" Margin="850,431,0,0" VerticalAlignment="Top" ComponentName="S610"/>
-        <Labels:DeviceLabel x:Name="S710" HorizontalAlignment="Left" Margin="1004,431,0,0" VerticalAlignment="Top" ComponentName="S710"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="981,510,0,0" VerticalAlignment="Top" GroupName="520"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="547,510,0,0" VerticalAlignment="Top" GroupName="230"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="675,510,0,0" VerticalAlignment="Top" GroupName="330"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="1051,510,0,0" VerticalAlignment="Top" GroupName="810"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="827,510,0,0" VerticalAlignment="Top" GroupName="460"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="897,510,0,0" VerticalAlignment="Top" GroupName="490"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="745,510,0,0" VerticalAlignment="Top" GroupName="350"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="745,585,0,0" VerticalAlignment="Top" GroupName="380"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="827,585,0,0" VerticalAlignment="Top" GroupName="514"/>
+		<Machines:QX_HMI HorizontalAlignment="Left" Margin="1410,260,0,0" VerticalAlignment="Top" Height="136" Width="125"/>
+		<Machines:QX_HMI HorizontalAlignment="Left" Margin="1410,510,0,0" VerticalAlignment="Top" Height="136" Width="125"/>
+		<Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="150,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
+		<Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="523,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
+		<Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="684,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
+		<Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="838,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
+		<Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="992,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
+		<Labels:DeviceLabel x:Name="Q41" HorizontalAlignment="Left" Margin="535,215,0,0" VerticalAlignment="Top" ComponentName="Q41"/>
+		<Labels:DeviceLabel x:Name="Q51" HorizontalAlignment="Left" Margin="696,215,0,0" VerticalAlignment="Top" ComponentName="Q51"/>
+		<Labels:DeviceLabel x:Name="Q61" HorizontalAlignment="Left" Margin="850,215,0,0" VerticalAlignment="Top" ComponentName="Q61"/>
+		<Labels:DeviceLabel x:Name="Q71" HorizontalAlignment="Left" Margin="1004,215,0,0" VerticalAlignment="Top" ComponentName="Q71"/>
+		<Labels:DeviceLabel x:Name="Q01" HorizontalAlignment="Left" Margin="162,200,0,0" VerticalAlignment="Top" ComponentName="Q01"/>
+		<Labels:DeviceLabel x:Name="ESTOP" HorizontalAlignment="Left" Margin="115,53,0,0" VerticalAlignment="Top" ComponentName="ESTOP-AREA-01"/>
+		<Labels:DeviceLabel x:Name="HMI_01" HorizontalAlignment="Left" Margin="1427,185,0,0" VerticalAlignment="Top" ComponentName="HMI-01"/>
+		<Labels:DeviceLabel x:Name="HMI_02" HorizontalAlignment="Left" Margin="1427,435,0,0" VerticalAlignment="Top" ComponentName="HMI-02"/>
+		<Labels:DeviceLabel x:Name="S410" HorizontalAlignment="Left" Margin="535,431,0,0" VerticalAlignment="Top" ComponentName="S410"/>
+		<Labels:DeviceLabel x:Name="S510" HorizontalAlignment="Left" Margin="696,431,0,0" VerticalAlignment="Top" ComponentName="S510"/>
+		<Labels:DeviceLabel x:Name="S610" HorizontalAlignment="Left" Margin="850,431,0,0" VerticalAlignment="Top" ComponentName="S610"/>
+		<Labels:DeviceLabel x:Name="S710" HorizontalAlignment="Left" Margin="1004,431,0,0" VerticalAlignment="Top" ComponentName="S710"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="981,510,0,0" VerticalAlignment="Top" GroupName="520"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="547,510,0,0" VerticalAlignment="Top" GroupName="230"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="675,510,0,0" VerticalAlignment="Top" GroupName="330"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="1051,510,0,0" VerticalAlignment="Top" GroupName="810"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="827,510,0,0" VerticalAlignment="Top" GroupName="460"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="897,510,0,0" VerticalAlignment="Top" GroupName="490"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="745,510,0,0" VerticalAlignment="Top" GroupName="350"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="745,585,0,0" VerticalAlignment="Top" GroupName="380"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="827,585,0,0" VerticalAlignment="Top" GroupName="514"/>
 
 	</Grid>
 </UserControl>
