--- a/Prevu.Synoptics.V3001-COVERIS/P520.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P520.xaml
@@ -101,8 +101,8 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="1032,349,0,0" VerticalAlignment="Top" Width="89" Color="Air" StatusComponent="520-26-CV1"/>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="855,349,0,0" VerticalAlignment="Top" Width="135" Color="Air" StatusComponent="520-01-MA1"/>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="1032,349,0,0" VerticalAlignment="Top" Width="89" Color="Air" StatusComponent="522-01-MA1"/>
+		<Labels:Pipe HorizontalAlignment="Left" Margin="855,349,0,0" VerticalAlignment="Top" Width="135" Color="Air" StatusComponent="520-26-CV1" InverseStatus="True"/>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="1255,376,0,0" VerticalAlignment="Top" Color="ByProduct" Width="34" StatusComponent="522-01-MA1" RenderTransformOrigin="0.5,0.5">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
@@ -189,7 +189,7 @@
 				</TransformGroup>
 			</Machines:CV_Valve_001.RenderTransform>
 		</Machines:CV_Valve_001>
-		<Machines:WaterPump HorizontalAlignment="Left" Margin="513,363,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Oil">
+		<Machines:WaterPump HorizontalAlignment="Left" Margin="523,363,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Oil">
 			<Machines:WaterPump.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform ScaleX="-1"/>
