--- a/Prevu.Synoptics.V2502_Polymer_Processor/P484.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P484.xaml
@@ -8,7 +8,7 @@
              x:Class="Prevu.Synoptics.P484" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="441,551,0,0" VerticalAlignment="Top" Color="Oil" Width="246" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="514-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="441,551,0,0" VerticalAlignment="Top" Color="Oil" Width="246" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="484-02-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -18,7 +18,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="602,499,0,0" VerticalAlignment="Top" Color="Oil" Width="128" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="514-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="602,499,0,0" VerticalAlignment="Top" Color="Oil" Width="128" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="484-02-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -28,7 +28,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="828,533,0,0" VerticalAlignment="Top" Width="132" StatusComponent="514-04-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="828,533,0,0" VerticalAlignment="Top" Width="132" StatusComponent="484-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -38,7 +38,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="680,249,0,0" VerticalAlignment="Top" Width="98" StatusComponent="496-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="680,249,0,0" VerticalAlignment="Top" Width="98" StatusComponent="470-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -48,7 +48,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="440,432,0,0" VerticalAlignment="Top" Color="Oil" Width="279" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="514-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="440,432,0,0" VerticalAlignment="Top" Color="Oil" Width="279" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="484-02-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -58,7 +58,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="336,497,0,0" VerticalAlignment="Top" Color="Oil" Width="250" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="514-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="336,497,0,0" VerticalAlignment="Top" Color="Oil" Width="250" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="484-02-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -135,7 +135,7 @@
     Margin="928,368,0,0" 
     VerticalAlignment="Top" 
     ComponentName="484-23-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="425,205,0,0" VerticalAlignment="Top" Width="307" StatusComponent="350-01-MA1" PipeHeight="Medium"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="425,205,0,0" VerticalAlignment="Top" Width="307" StatusComponent="470-01-MA1" PipeHeight="Medium"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="407,186,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="46" StatusComponent="350-01-MA1" PipeHeight="Medium" Height="10">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -150,19 +150,19 @@
             Margin="452,78,0,0" 
             VerticalAlignment="Top" 
             ComponentName="470-01-MA1" Loaded="DeviceLabel_Loaded"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="136,93,0,0" VerticalAlignment="Top" Width="170" StatusComponent="331-01-MA1" PipeHeight="Medium" Height="10"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="136,93,0,0" VerticalAlignment="Top" Width="170" StatusComponent="430-01-MA1" PipeHeight="Medium" Height="10"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             Margin="106,62,0,0" 
             VerticalAlignment="Top" 
             JumpFromLabel="470-01-MA1" 
             JumpToLabel="430-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="145,238,0,0" VerticalAlignment="Top" Width="147" Color="Water" StatusComponent="440-01-MA1" VisibilityComponent="450-23-CV3"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="145,238,0,0" VerticalAlignment="Top" Width="147" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent=""/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             Margin="106,205,0,0" 
             VerticalAlignment="Top" 
             JumpFromLabel="470-01-MA1" 
             JumpToLabel="444-01-MA1" Direction="Left"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="255,205,0,0" VerticalAlignment="Top" Width="71" Color="Water" StatusComponent="440-01-MA1" VisibilityComponent="450-23-CV3" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="255,205,0,0" VerticalAlignment="Top" Width="71" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -182,7 +182,7 @@
                 </TransformGroup>
             </Machines:DCE_DryingCentrifuge.RenderTransform>
         </Machines:DCE_DryingCentrifuge>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1078,645,0,0" VerticalAlignment="Top" Color="Water" Width="50" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="514-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1078,645,0,0" VerticalAlignment="Top" Color="Water" Width="50" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="502-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -192,7 +192,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="948,646,0,0" VerticalAlignment="Top" Width="98" StatusComponent="516-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="948,646,0,0" VerticalAlignment="Top" Width="98" StatusComponent="500-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -202,8 +202,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="992,686,0,0" VerticalAlignment="Top" Width="92" StatusComponent="516-01-MA1" PipeHeight="Medium" Height="22"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1123,698,0,0" VerticalAlignment="Top" Width="87" RenderTransformOrigin="0.5,0.5" StatusComponent="518-01-MA1" PipeHeight="Medium" Height="22">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="992,686,0,0" VerticalAlignment="Top" Width="92" StatusComponent="500-01-MA1" PipeHeight="Medium" Height="22"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1123,698,0,0" VerticalAlignment="Top" Width="87" RenderTransformOrigin="0.5,0.5" StatusComponent="502-01-MA1" PipeHeight="Medium" Height="22">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -227,11 +227,11 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="882,622,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="480-01-MA1"/>
+            ComponentName="500-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="1060,724,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="482-01-MA1"/>
+            ComponentName="502-01-MA1"/>
         <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="1064,594,0,0" VerticalAlignment="Top" Color="Water" RenderTransformOrigin="0.5,0.5" Height="45" Width="77">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
@@ -245,11 +245,11 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="1126,592,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="482-21-CV1"/>
+            ComponentName="502-21-CV1"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             Margin="1195,673,0,0" 
             VerticalAlignment="Top" 
-            JumpFromLabel="518-01-MA1" 
-            JumpToLabel="520-01-MA1"/>
+            JumpFromLabel="502-01-MA1" 
+            JumpToLabel="530-01-MA1"/>
     </Grid>
 </UserControl>
