--- a/Prevu.Synoptics.V2502_Polymer_Processor/P520.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P520.xaml
@@ -18,7 +18,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="170,267,0,0" VerticalAlignment="Top" Color="Water" Width="66" StatusComponent="529-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="520-23-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="170,267,0,0" VerticalAlignment="Top" Color="Water" Width="66" StatusComponent="508-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -41,7 +41,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="591,371,0,0" VerticalAlignment="Top" Width="251" StatusComponent="520-01-MA1" PipeHeight="Medium"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="365,126,0,0" VerticalAlignment="Top" Width="126" StatusComponent="518-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="365,126,0,0" VerticalAlignment="Top" Width="126" StatusComponent="492-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -51,9 +51,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="335,66,0,0" VerticalAlignment="Top" Width="98" StatusComponent="518-01-MA1" PipeHeight="Medium"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="201,187,0,0" VerticalAlignment="Top" Width="51" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="520-24-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="182,205,0,0" VerticalAlignment="Top" Color="Water" Width="42" StatusComponent="529-01-MA1" RenderTransformOrigin="0.5,0.5" Height="6" VisibilityComponent="520-24-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="335,66,0,0" VerticalAlignment="Top" Width="98" StatusComponent="492-01-MA1" PipeHeight="Medium"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="201,187,0,0" VerticalAlignment="Top" Width="51" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent=""/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="182,205,0,0" VerticalAlignment="Top" Color="Water" Width="42" StatusComponent="508-01-MA1" RenderTransformOrigin="0.5,0.5" Height="6" VisibilityComponent="">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -63,11 +63,11 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="171,224,0,0" VerticalAlignment="Top" Width="34" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="520-24-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="171,235,0,0" VerticalAlignment="Top" Width="34" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="520-23-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="290,299,0,0" VerticalAlignment="Top" Width="165" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="520-23-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="201,299,0,0" VerticalAlignment="Top" Width="51" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="520-23-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="290,187,0,0" VerticalAlignment="Top" Width="160" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="520-24-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="171,224,0,0" VerticalAlignment="Top" Width="34" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent=""/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="171,235,0,0" VerticalAlignment="Top" Width="34" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent=""/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="290,299,0,0" VerticalAlignment="Top" Width="165" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="520-23-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="201,299,0,0" VerticalAlignment="Top" Width="51" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent=""/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="290,187,0,0" VerticalAlignment="Top" Width="160" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="520-24-CV1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="400,328,0,0" VerticalAlignment="Top" Width="68" Color="Water" StatusComponent="520-01-MA1" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -199,7 +199,7 @@
                       Margin="287,34,0,0" 
                       VerticalAlignment="Top" 
                       JumpFromLabel="520-01-MA1" 
-                      JumpToLabel="518-01-MA1"/>
+                      JumpToLabel="492-01-MA1"/>
         <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="409,144,0,0" VerticalAlignment="Top" Height="234" Width="178" RenderTransformOrigin="0.5,0.5">
             <Machines:DCE_DryingCentrifuge.RenderTransform>
                 <TransformGroup>
@@ -214,9 +214,9 @@
 		Margin="719,275,0,0" 
 		VerticalAlignment="Top" 
 		ComponentName="520-02-MA1" RenderTransformOrigin="0.567,-2.17"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="122,229,0,0" VerticalAlignment="Top" Width="52" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="520-24-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1113,507,0,0" VerticalAlignment="Top" Width="90" StatusComponent="534-01-MA1" PipeHeight="Medium" Height="14"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="575,497,0,0" VerticalAlignment="Top" Width="330" StatusComponent="534-01-MA1" Color="Air"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="122,229,0,0" VerticalAlignment="Top" Width="52" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent=""/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1113,507,0,0" VerticalAlignment="Top" Width="90" StatusComponent="564-01-MA1" PipeHeight="Medium" Height="14"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="575,497,0,0" VerticalAlignment="Top" Width="330" StatusComponent="564-01-MA1" Color="Air"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="884,427,0,0" VerticalAlignment="Top" Width="98" StatusComponent="524-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="" Height="12">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -227,7 +227,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="956,496,0,0" VerticalAlignment="Top" Width="117" StatusComponent="524-01-MA1" PipeHeight="Medium" VisibilitySignal="530-21-ZS1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="956,496,0,0" VerticalAlignment="Top" Width="117" StatusComponent="524-01-MA1" PipeHeight="Medium" VisibilitySignal="560-21-ZS1"/>
         <Rectangle HorizontalAlignment="Left" Height="169" Margin="514,423,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="360" RadiusX="15" RadiusY="15"/>
         <Rectangle HorizontalAlignment="Left" Height="35" Margin="817,467,0,0" Stroke="Black" VerticalAlignment="Top" Width="2"/>
         <Ellipse HorizontalAlignment="Left" Height="16" Margin="810,491,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
@@ -269,7 +269,7 @@
             Margin="711,535,0,0" 
             VerticalAlignment="Top" 
             ComponentName="560-11-R1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="628,691,0,0" VerticalAlignment="Top" Width="330" StatusComponent="534-01-MA1" Color="Air"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="628,691,0,0" VerticalAlignment="Top" Width="330" StatusComponent="574-01-MA1" Color="Air"/>
         <Rectangle HorizontalAlignment="Left" Height="169" Margin="568,617,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="360" RadiusX="15" RadiusY="15"/>
         <Rectangle HorizontalAlignment="Left" Height="35" Margin="870,661,0,0" Stroke="Black" VerticalAlignment="Top" Width="2"/>
         <Ellipse HorizontalAlignment="Left" Height="16" Margin="864,685,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
@@ -292,8 +292,8 @@
             Margin="764,729,0,0" 
             VerticalAlignment="Top" 
             ComponentName="570-11-R1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1167,700,0,0" VerticalAlignment="Top" Width="118" StatusComponent="534-01-MA1" PipeHeight="Medium" Height="14"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="929,616,0,0" VerticalAlignment="Top" Width="116" StatusComponent="524-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="" Height="12">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1167,700,0,0" VerticalAlignment="Top" Width="118" StatusComponent="574-01-MA1" PipeHeight="Medium" Height="14"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="929,616,0,0" VerticalAlignment="Top" Width="116" StatusComponent="564-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="" Height="12">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -303,7 +303,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1010,689,0,0" VerticalAlignment="Top" Width="117" StatusComponent="524-01-MA1" PipeHeight="Medium" VisibilitySignal="530-21-ZS1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1010,689,0,0" VerticalAlignment="Top" Width="117" StatusComponent="564-01-MA1" PipeHeight="Medium" VisibilitySignal="530-21-ZS1"/>
         <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1125,654,0,0" VerticalAlignment="Top" Height="67" Width="67"/>
         <Machines:DV_Diverter_T HorizontalAlignment="Left" Margin="937,629,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Machines:DV_Diverter_T.RenderTransform>
@@ -323,8 +323,8 @@
             Margin="1006,620,0,0" 
             VerticalAlignment="Top" 
             ComponentName="570-21-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="982,559,0,0" VerticalAlignment="Top" Width="221" StatusComponent="534-01-MA1" PipeHeight="Medium" Height="14"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1168,534,0,0" VerticalAlignment="Top" Width="60" StatusComponent="524-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="" Height="12">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="982,559,0,0" VerticalAlignment="Top" Width="221" StatusComponent="564-01-MA1" PipeHeight="Medium" Height="14"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1168,534,0,0" VerticalAlignment="Top" Width="60" StatusComponent="564-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="" Height="12">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
