--- a/Prevu.Synoptics.V2502_Polymer_Processor/P530.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P530.xaml
@@ -8,7 +8,7 @@
              x:Class="Prevu.Synoptics.P530" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid Margin="0,2,0,-2">
-        <Labels:Pipe HorizontalAlignment="Left" Margin="405,420,0,0" VerticalAlignment="Top" Width="58" Color="Water" StatusComponent="520-22-CV1" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="405,420,0,0" VerticalAlignment="Top" Width="58" Color="Water" StatusComponent="530-22-CV1" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -18,7 +18,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="170,267,0,0" VerticalAlignment="Top" Color="Water" Width="66" StatusComponent="529-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="520-23-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="170,267,0,0" VerticalAlignment="Top" Color="Water" Width="66" StatusComponent="508-01-MA1" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -28,9 +28,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="360,240,0,0" VerticalAlignment="Top" Width="73" StatusComponent="520-21-CV1" Color="Oil" Height="6"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="889,383,0,0" VerticalAlignment="Top" Width="48" StatusComponent="524-01-MA1" PipeHeight="Medium"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="561,341,0,0" VerticalAlignment="Top" Width="68" StatusComponent="520-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="360,240,0,0" VerticalAlignment="Top" Width="73" StatusComponent="530-21-CV1" Color="Oil" Height="6"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="889,383,0,0" VerticalAlignment="Top" Width="48" StatusComponent="534-01-MA1" PipeHeight="Medium"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="561,341,0,0" VerticalAlignment="Top" Width="68" StatusComponent="530-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -40,8 +40,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="591,371,0,0" VerticalAlignment="Top" Width="251" StatusComponent="520-01-MA1" PipeHeight="Medium"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="365,126,0,0" VerticalAlignment="Top" Width="126" StatusComponent="518-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="591,371,0,0" VerticalAlignment="Top" Width="251" StatusComponent="530-01-MA1" PipeHeight="Medium"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="365,126,0,0" VerticalAlignment="Top" Width="126" StatusComponent="502-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -51,9 +51,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="335,66,0,0" VerticalAlignment="Top" Width="98" StatusComponent="518-01-MA1" PipeHeight="Medium"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="201,187,0,0" VerticalAlignment="Top" Width="51" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="520-24-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="182,205,0,0" VerticalAlignment="Top" Color="Water" Width="42" StatusComponent="529-01-MA1" RenderTransformOrigin="0.5,0.5" Height="6" VisibilityComponent="520-24-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="335,66,0,0" VerticalAlignment="Top" Width="98" StatusComponent="502-01-MA1" PipeHeight="Medium"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="201,187,0,0" VerticalAlignment="Top" Width="51" Color="Water" StatusComponent="508-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="182,205,0,0" VerticalAlignment="Top" Color="Water" Width="42" StatusComponent="508-01-MA1" RenderTransformOrigin="0.5,0.5" Height="6">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -63,12 +63,12 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="171,224,0,0" VerticalAlignment="Top" Width="34" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="520-24-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="171,235,0,0" VerticalAlignment="Top" Width="34" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="520-23-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="290,299,0,0" VerticalAlignment="Top" Width="165" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="520-23-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="201,299,0,0" VerticalAlignment="Top" Width="51" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="520-23-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="290,187,0,0" VerticalAlignment="Top" Width="160" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="520-24-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="400,328,0,0" VerticalAlignment="Top" Width="68" Color="Water" StatusComponent="520-01-MA1" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="171,224,0,0" VerticalAlignment="Top" Width="34" Color="Water" StatusComponent="508-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="171,235,0,0" VerticalAlignment="Top" Width="34" Color="Water" StatusComponent="508-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="290,299,0,0" VerticalAlignment="Top" Width="165" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="530-23-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="201,299,0,0" VerticalAlignment="Top" Width="51" Color="Water" StatusComponent="508-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="290,187,0,0" VerticalAlignment="Top" Width="160" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="530-24-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="400,328,0,0" VerticalAlignment="Top" Width="68" Color="Water" StatusComponent="530-01-MA1" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -78,9 +78,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="788,195,0,0" VerticalAlignment="Top" Width="89" Color="Air" StatusComponent="522-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="611,195,0,0" VerticalAlignment="Top" Width="135" Color="Air" StatusComponent="520-26-CV1" InverseStatus="True"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1011,222,0,0" VerticalAlignment="Top" Color="ByProduct" Width="34" StatusComponent="522-01-MA1" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="788,195,0,0" VerticalAlignment="Top" Width="89" Color="Air" StatusComponent="532-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="611,195,0,0" VerticalAlignment="Top" Width="135" Color="Air" StatusComponent="530-26-CV1" InverseStatus="True"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1011,222,0,0" VerticalAlignment="Top" Color="ByProduct" Width="34" StatusComponent="532-01-MA1" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -90,7 +90,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="904,207,0,0" VerticalAlignment="Top" Width="126" Color="ByProduct" StatusComponent="522-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="904,207,0,0" VerticalAlignment="Top" Width="126" Color="ByProduct" StatusComponent="532-01-MA1"/>
         <Rectangle HorizontalAlignment="Left" Height="36" Margin="512,157,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <TransformGroup>
@@ -198,8 +198,8 @@
         <Labels:JumpLabel HorizontalAlignment="Left" 
                       Margin="287,34,0,0" 
                       VerticalAlignment="Top" 
-                      JumpFromLabel="520-01-MA1" 
-                      JumpToLabel="518-01-MA1"/>
+                      JumpFromLabel="530-01-MA1" 
+                      JumpToLabel="502-01-MA1"/>
         <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="409,144,0,0" VerticalAlignment="Top" Height="234" Width="178" RenderTransformOrigin="0.5,0.5">
             <Machines:DCE_DryingCentrifuge.RenderTransform>
                 <TransformGroup>
@@ -214,10 +214,10 @@
 		Margin="719,275,0,0" 
 		VerticalAlignment="Top" 
 		ComponentName="530-02-MA1" RenderTransformOrigin="0.567,-2.17"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="122,229,0,0" VerticalAlignment="Top" Width="52" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="520-24-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="122,229,0,0" VerticalAlignment="Top" Width="52" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent=""/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="1113,507,0,0" VerticalAlignment="Top" Width="90" StatusComponent="584-01-MA1" PipeHeight="Medium" Height="14"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="575,497,0,0" VerticalAlignment="Top" Width="330" StatusComponent="534-01-MA1" Color="Air"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="884,427,0,0" VerticalAlignment="Top" Width="98" StatusComponent="524-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="" Height="12">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="575,497,0,0" VerticalAlignment="Top" Width="330" StatusComponent="584-01-MA1" Color="Air"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="884,427,0,0" VerticalAlignment="Top" Width="98" StatusComponent="534-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="" Height="12">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -227,7 +227,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="956,496,0,0" VerticalAlignment="Top" Width="117" StatusComponent="524-01-MA1" PipeHeight="Medium" VisibilitySignal="530-21-ZS1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="956,496,0,0" VerticalAlignment="Top" Width="117" StatusComponent="534-01-MA1" PipeHeight="Medium" VisibilitySignal="580-21-ZS1"/>
         <Rectangle HorizontalAlignment="Left" Height="169" Margin="514,423,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="360" RadiusX="15" RadiusY="15"/>
         <Rectangle HorizontalAlignment="Left" Height="35" Margin="817,467,0,0" Stroke="Black" VerticalAlignment="Top" Width="2"/>
         <Ellipse HorizontalAlignment="Left" Height="16" Margin="810,491,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
@@ -269,7 +269,7 @@
             Margin="711,535,0,0" 
             VerticalAlignment="Top" 
             ComponentName="580-11-R1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="628,691,0,0" VerticalAlignment="Top" Width="330" StatusComponent="534-01-MA1" Color="Air"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="628,691,0,0" VerticalAlignment="Top" Width="330" StatusComponent="594-01-MA1" Color="Air"/>
         <Rectangle HorizontalAlignment="Left" Height="169" Margin="568,617,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="360" RadiusX="15" RadiusY="15"/>
         <Rectangle HorizontalAlignment="Left" Height="35" Margin="870,661,0,0" Stroke="Black" VerticalAlignment="Top" Width="2"/>
         <Ellipse HorizontalAlignment="Left" Height="16" Margin="864,685,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
@@ -303,7 +303,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1010,689,0,0" VerticalAlignment="Top" Width="117" StatusComponent="584-01-MA1" PipeHeight="Medium" VisibilitySignal="530-21-ZS1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1010,689,0,0" VerticalAlignment="Top" Width="117" StatusComponent="584-01-MA1" PipeHeight="Medium" VisibilitySignal="590-21-ZS1"/>
         <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1125,654,0,0" VerticalAlignment="Top" Height="67" Width="67"/>
         <Machines:DV_Diverter_T HorizontalAlignment="Left" Margin="937,629,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Machines:DV_Diverter_T.RenderTransform>
